# EmbeddedDebugger

./: .gitignore  .gitmodules  .travis.yml  EmbeddedDebugger.sln  EmbeddedDebugger.sln.licenseheader  README.md
.github/workflows/: main.yml
EmbeddedDebugger/: App.config  App.xaml.cs  EmbeddedDebugger.csproj  packages.config
EmbeddedDebugger.Connectors/: EmbeddedDebugger.Connectors.csproj
EmbeddedDebugger.Connectors.ProjectConnectors/: EmbeddedDebugger.Connectors.ProjectConnectors.csproj
EmbeddedDebugger.Connectors.ProjectConnectors/Connectors/: ExampleProjectConnector.cs
EmbeddedDebugger.Connectors.ProjectConnectors/Properties/: AssemblyInfo.cs
EmbeddedDebugger.Connectors/Properties/: Resources.Designer.cs  Settings.Designer.cs
EmbeddedDebugger.Connectors/TCP/: TcpConnector.cs  TcpConnectorSettingsWindow.xaml.cs
EmbeddedDebugger.DebugProtocol/: EmbeddedDebugger.DebugProtocol.csproj
EmbeddedDebugger.DebugProtocol/Enums/: ReadWrite.cs  TraceLevel.cs  ValueDisplayFormat.cs  VariableType.cs
EmbeddedDebugger.DebugProtocol/Properties/: AssemblyInfo.cs
EmbeddedDebugger.DebugProtocol/RegisterValues/: RegisterValue.cs  RegisterValueBool.cs  RegisterValueSShort.cs  RegisterValueUChar.cs  RegisterValueULong.cs
EmbeddedDebugger.UnitTests/: EmbeddedDebugger.UnitTests.csproj
EmbeddedDebugger/Model/: CpuNode.cs  DebugProtocol.cs  ModelManager.cs
EmbeddedDebugger/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  Settings.settings
EmbeddedEmulator/: EmbeddedEmulator.csproj
EmbeddedEmulator/Model/: EmbeddedConfig.cs  Register.cs
EmbeddedEmulator/Properties/: AssemblyInfo.cs  Resources.Designer.cs  (+1 more)
Examples/stm32discovery/: CMakeLists.txt  README.md
Examples/stm32discovery/src/: toolchain.cmake
Examples/stm32discovery/src/Inc/: stm32f4xx_it.h
Examples/stm32discovery/src/Src/: gpio.c  i2s.c  main.c  stm32f4xx_it.c  usart.c
Icon/: icon.pdn
ProtocolSpecification/: .gitignore  .travis.yml  README.md  config.toml
TargetSide/: README.md  debugMessage.c  debugMessage.h  debugProtocol.c
cpp/: ClassDiagram.txt  EmbeddedDebugger.pro  LicenseHeader.txt  README.md  RegisterExample.json
csharp/: EmbeddedDebugger.sln
(+290 files in other folders)
